tests/baselines/reference/augmentedClassWithPrototypePropertyOnModule.errors.txt
augmentedClassWithPrototypePropertyOnModule.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedClassWithPrototypePropertyOnModule.ts(3,9): error TS2300: Duplicate identifier 'prototype'.


==== augmentedClassWithPrototypePropertyOnModule.ts (2 errors) ====
    declare module m {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var f;
        var prototype; // This should be error since prototype would be static property on class m
            ~~~~~~~~~
!!! error TS2300: Duplicate identifier 'prototype'.
    }
    declare class m {
    }